Tags JS and CSS

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </div>
 
       <!-- SECTION TAGS -->
+
       <div class="tags"></div>
 
       <!-- SECTION DROPDOWN -->
@@ -62,5 +63,7 @@
         </div>
       </div>
     </header>
+
+    <script src="./dist/app.js"></script>
   </body>
 </html>
