--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
       </div>
     </header>
+    <main class="main"></main>
 
     <script src="./dist/app.js"></script>
   </body>
