--- a/index.html
+++ b/index.html
@@ -47,21 +47,15 @@
 
       <!-- SECTION TAGS -->
 
+      <p class="test">Test 1</p>
+      <p class="test">Test 2</p>
+      <p class="test">Test 3</p>
+      <p class="test">Test 4</p>
+      <p class="test">Test 5</p>
+
       <div class="tags"></div>
 
       <!-- SECTION DROPDOWN -->
-
-      <div class="dropdowns">
-        <div class="dropdown">
-          <input
-            class="dropdown__input"
-            type="search"
-            placeholder="Ingrédients"
-          />
-          <em class="dropdown__icon down fas fa-chevron-down"></em>
-          <em class="dropdown__icon up fas fa-chevron-up"></em>
-        </div>
-      </div>
     </header>
     <main class="main"></main>
 
