--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!-- SECTION DROPDOWN -->
 
       <div class="dropdowns">
-        <!-- <div class="dropdown ingredient">
+        <div class="dropdown ingredient">
           <input
             class="dropdown__input"
             type="search"
@@ -61,8 +61,8 @@
           <em class="dropdown__icon down fas fa-chevron-down"></em>
           <em class="dropdown__icon up fas fa-chevron-up"></em>
           <div id="dropdownIngredient" class="dropdown__list"></div>
-        </div> -->
-        <!-- <div class="dropdown appareil">
+        </div>
+        <div class="dropdown appareil">
           <input
             class="dropdown__input"
             type="search"
@@ -72,8 +72,8 @@
           <em class="dropdown__icon down fas fa-chevron-down"></em>
           <em class="dropdown__icon up fas fa-chevron-up"></em>
           <div id="dropdownAppareil" class="dropdown__list"></div>
-        </div> -->
-        <!-- <div class="dropdown ustensil">
+        </div>
+        <div class="dropdown ustensil">
           <input
             class="dropdown__input"
             type="search"
@@ -83,7 +83,7 @@
           <em class="dropdown__icon down fas fa-chevron-down"></em>
           <em class="dropdown__icon up fas fa-chevron-up"></em>
           <div id="dropdownUstensil" class="dropdown__list"></div>
-        </div> -->
+        </div>
       </div>
     </header>
     <main class="main"></main>
