--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
     <!-- Import Style  -->
     <link rel="stylesheet" href="./dist/css/style.css" />
+
+    <!-- Import JS -->
+    <script src="./dist/app.js" defer></script>
+
     <title>Les Petits Plats</title>
   </head>
   <body>
@@ -87,7 +91,5 @@
       </div>
     </header>
     <main class="main"></main>
-
-    <script src="./dist/app.js"></script>
   </body>
 </html>
