--- a/index.html
+++ b/index.html
@@ -54,41 +54,7 @@
 
       <!-- SECTION DROPDOWN -->
 
-      <div class="dropdowns">
-        <!-- <div class="dropdown ingredient">
-          <input
-            class="dropdown__input"
-            type="search"
-            placeholder="Ingrédients"
-          />
-          <p class="dropdown__select"></p>
-          <em class="dropdown__icon down fas fa-chevron-down"></em>
-          <em class="dropdown__icon up fas fa-chevron-up"></em>
-          <div id="dropdownIngredient" class="dropdown__list"></div>
-        </div> -->
-        <!-- <div class="dropdown appareil">
-          <input
-            class="dropdown__input"
-            type="search"
-            placeholder="Appareils"
-          />
-          <p class="dropdown__select"></p>
-          <em class="dropdown__icon down fas fa-chevron-down"></em>
-          <em class="dropdown__icon up fas fa-chevron-up"></em>
-          <div id="dropdownAppareil" class="dropdown__list"></div>
-        </div> -->
-        <!-- <div class="dropdown ustensil">
-          <input
-            class="dropdown__input"
-            type="search"
-            placeholder="Ustensiles"
-          />
-          <p class="dropdown__select"></p>
-          <em class="dropdown__icon down fas fa-chevron-down"></em>
-          <em class="dropdown__icon up fas fa-chevron-up"></em>
-          <div id="dropdownUstensil" class="dropdown__list"></div>
-        </div> -->
-      </div>
+      <div class="dropdowns"></div>
     </header>
     <main class="main"></main>
   </body>
